--- a/net/grive/Makefile
+++ b/net/grive/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2017/04/30 01:21:56 ryoon Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/17 19:44:37 joerg Exp $
 
 DISTNAME=	${GHNAME}-${GHDATE}-${GHCOMMIT}
 PKGNAME=	${GHNAME}-0.3.0.${GHDATE}
@@ -18,7 +18,7 @@ GHCOMMIT=	27817e835fe115ebbda5410ec904aa49a2ad01f1
 
 WRKSRC=		${WRKDIR}/grive-${GHCOMMIT}
 USE_CMAKE=	yes
-USE_LANGUAGES=	c c++
+USE_LANGUAGES=	c c++11
 
 SUBST_CLASSES+=		disableqt
 SUBST_MESSAGE.disableqt=Disable QT frontend
