--- a/devel/p5-Moose/Makefile
+++ b/devel/p5-Moose/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.104 2017/06/13 07:01:42 maya Exp $
+# $NetBSD: Makefile,v 1.105 2017/06/18 03:30:35 mef Exp $
 
-DISTNAME=	Moose-2.2004
+DISTNAME=	Moose-2.2005
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Test/}
 
