--- a/print/tex-babel-russian/Makefile
+++ b/print/tex-babel-russian/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2016/06/16 04:06:00 markd Exp $
+# $NetBSD: Makefile,v 1.4 2017/06/20 21:01:17 markd Exp $
 
 DISTNAME=	babel-russian
-PKGNAME=	tex-${DISTNAME}-1.3h
-TEXLIVE_REV=	39784
+PKGNAME=	tex-${DISTNAME}-1.3i
+TEXLIVE_REV=	42885
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://ctan.org/pkg/babel-russian
