--- a/print/tex-beamer/Makefile
+++ b/print/tex-beamer/Makefile
@@ -1,12 +1,13 @@
-# $NetBSD: Makefile,v 1.4 2015/04/22 10:12:41 markd Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/20 21:01:17 markd Exp $
 
 DISTNAME=	beamer
-PKGNAME=	tex-${DISTNAME}-3.36
-TEXLIVE_REV=	36461
+PKGNAME=	tex-${DISTNAME}-3.41
+TEXLIVE_REV=	43073
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/beamer
 COMMENT=	LaTeX class for producing presentations and slides
-LICENSE=	lppl-1.3c
+LICENSE=	lppl-1.3c OR gnu-gpl-v2
 
 CONFLICTS+=	teTeX-texmf<=3.0nb22
 DEPENDS+=	tex-pgf-[0-9]*:../../print/tex-pgf
