--- a/misc/xfce4-weather-plugin/Makefile
+++ b/misc/xfce4-weather-plugin/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.49 2017/04/22 21:03:44 adam Exp $
+# $NetBSD: Makefile,v 1.50 2017/06/20 22:13:23 youri Exp $
 
-PKGREVISION= 5
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	0.8.7
+VERSION=	0.8.9
 DISTNAME=	xfce4-weather-plugin-${VERSION}
 CATEGORIES=	misc
 MASTER_SITES=	http://archive.xfce.org/src/panel-plugins/xfce4-weather-plugin/0.8/
@@ -14,6 +13,7 @@ COMMENT=	Xfce weather plugin
 LDFLAGS.SunOS+=	-lsocket -lnsl
 
 .include "../../net/libsoup/buildlink3.mk"
+.include "../../x11/gtk2/buildlink3.mk"
 .include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../textproc/libxml2/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
