--- a/lang/g95/Makefile
+++ b/lang/g95/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.27 2016/08/16 00:53:41 dholland Exp $
+# $NetBSD: Makefile,v 1.28 2017/06/21 01:12:56 maya Exp $
 
 DISTNAME=	g95_source
 PKGNAME=	g95-0.93
-PKGREVISION=	8
+PKGREVISION=	9
 CATEGORIES=	lang
 MASTER_SITES=	http://ftp.g95.org/v${PKGVERSION_NOREV}/
 EXTRACT_SUFX=	.tgz
