--- a/fonts/tex-fontools/Makefile
+++ b/fonts/tex-fontools/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2016/07/09 06:38:17 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/21 06:13:16 markd Exp $
 
 DISTNAME=	fontools
-PKGNAME=	tex-${DISTNAME}-2016
-PKGREVISION=	1
-TEXLIVE_REV=	38924
+PKGNAME=	tex-${DISTNAME}-2017
+TEXLIVE_REV=	43573
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://ctan.org/pkg/fontools
