--- a/print/tex-fancyhdr-doc/Makefile
+++ b/print/tex-fancyhdr-doc/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.4 2016/01/27 10:42:25 markd Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/21 06:13:15 markd Exp $
 
 DISTNAME=	fancyhdr.doc
-PKGNAME=	tex-${DISTNAME:S/./-/}-3.1
-TEXLIVE_REV=	15878
-DIST_SUBDIR=	${PKGBASE:S/-doc//}-${TEXLIVE_REV}.2010
+PKGNAME=	tex-${DISTNAME:S/./-/}-3.9
+TEXLIVE_REV=	44479
 
 MAINTAINER=	minskim@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/fancyhdr
 COMMENT=	Documentation for tex-fancyhdr
 LICENSE=	lppl-1.3c
 
