--- a/print/tex-fancyhdr/Makefile
+++ b/print/tex-fancyhdr/Makefile
@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.5 2016/01/27 10:42:26 markd Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/21 06:13:15 markd Exp $
 
 DISTNAME=	fancyhdr
-PKGNAME=	tex-${DISTNAME}-3.1
-PKGREVISION=	1
-TEXLIVE_REV=	15878
-DIST_SUBDIR=	${PKGBASE}-${TEXLIVE_REV}.2010
+PKGNAME=	tex-${DISTNAME}-3.9
+TEXLIVE_REV=	44479
 
 MAINTAINER=	minskim@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/fancyhdr
 COMMENT=	Extensive control of page headers and footers in LaTeX2e
 LICENSE=	lppl-1.3c
 
