--- a/www/p5-HTTP-Message/Makefile
+++ b/www/p5-HTTP-Message/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2017/06/05 14:25:22 ryoon Exp $
+# $NetBSD: Makefile,v 1.17 2017/06/21 07:21:39 wiz Exp $
 
-DISTNAME=	HTTP-Message-6.11
+DISTNAME=	HTTP-Message-6.13
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=HTTP/}
 
@@ -19,6 +18,7 @@ DEPENDS+=	p5-HTTP-Date>=6:../../www/p5-HTTP-Date
 DEPENDS+=	p5-Encode-Locale>=1.02:../../textproc/p5-Encode-Locale
 DEPENDS+=	p5-LWP-MediaTypes>=6.01:../../www/p5-LWP-MediaTypes
 DEPENDS+=	p5-IO-HTML-[0-9]*:../../devel/p5-IO-HTML
+DEPENDS+=	p5-Try-Tiny-[0-9]*:../../devel/p5-Try-Tiny
 
 PERL5_PACKLIST=		auto/HTTP/Message/.packlist
 
