--- a/print/tex-latex-doc/Makefile
+++ b/print/tex-latex-doc/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2016/08/07 09:09:38 markd Exp $
+# $NetBSD: Makefile,v 1.11 2017/06/21 08:28:42 markd Exp $
 
 DISTNAME=	latex.doc
-PKGNAME=	tex-${DISTNAME:S/./-/}-2016.41765
-TEXLIVE_REV=	41765
+PKGNAME=	tex-${DISTNAME:S/./-/}-20170101.1
+TEXLIVE_REV=	43813
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://ctan.org/pkg/latex
