--- a/graphics/tex-pst-pdf-doc/Makefile
+++ b/graphics/tex-pst-pdf-doc/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2016/08/07 10:38:00 markd Exp $
+# $NetBSD: Makefile,v 1.4 2017/06/21 11:45:59 markd Exp $
 
 DISTNAME=	pst-pdf.doc
-PKGNAME=	tex-${DISTNAME:S/./-/}-1.2a
-TEXLIVE_REV=	41710
+PKGNAME=	tex-${DISTNAME:S/./-/}-1.2c
+TEXLIVE_REV=	44047
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://ctan.org/pkg/pst-pdf
