--- a/graphics/tex-pst-pdf/Makefile
+++ b/graphics/tex-pst-pdf/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2016/08/07 10:38:00 markd Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/21 11:45:59 markd Exp $
 
 DISTNAME=	pst-pdf
-PKGNAME=	tex-${DISTNAME}-1.2a
-TEXLIVE_REV=	41710
+PKGNAME=	tex-${DISTNAME}-1.2c
+TEXLIVE_REV=	44047
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://ctan.org/pkg/pst-pdf
