--- a/print/tex-preview-doc/Makefile
+++ b/print/tex-preview-doc/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.4 2016/06/16 04:06:15 markd Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/21 11:45:58 markd Exp $
 
 DISTNAME=	preview.doc
-PKGNAME=	tex-${DISTNAME:S/./-/}-11.89
-TEXLIVE_REV=	38865
+PKGNAME=	tex-${DISTNAME:S/./-/}-11.90
+TEXLIVE_REV=	44227
 
 MAINTAINER=	minskim@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/preview
 COMMENT=	Documentation for tex-preview
 LICENSE=	gnu-gpl-v3
 
