--- a/www/ruby-actionpack42/Makefile
+++ b/www/ruby-actionpack42/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2017/06/04 14:46:29 taca Exp $
+# $NetBSD: Makefile,v 1.3 2017/06/21 13:12:21 taca Exp $
 
-DISTNAME=	actionpack-${RUBY_RAILS_VERSION}
-PKGREVISION=	1
+DISTNAME=	actionpack-${RAILS_VERSION}
+PKGNAME=	${RUBY_PKGPREFIX}-actionpack${RUBY_RAILS}-${RAILS_VERSION}
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
