--- a/www/ruby-rails42/Makefile
+++ b/www/ruby-rails42/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2017/04/22 10:44:40 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2017/06/21 13:12:21 taca Exp $
 
-DISTNAME=	rails-${RUBY_RAILS_VERSION}
+DISTNAME=	rails-${RAILS_VERSION}
+PKGNAME=	${RUBY_PKGPREFIX}-rails${RUBY_RAILS}-${RAILS_VERSION}
 CATEGORIES=	www
 
 MAINTAINER=	minskim@NetBSD.org
