--- a/devel/ruby-railties32/Makefile
+++ b/devel/ruby-railties32/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2016/11/19 14:38:03 taca Exp $
+# $NetBSD: Makefile,v 1.13 2017/06/21 13:13:48 taca Exp $
 
-DISTNAME=	railties-${RUBY_RAILS_VERSION}
+DISTNAME=	railties-${RAILS_VERSION}
+PKGNAME=	${RUBY_PKGPREFIX}-railties${RUBY_RAILS}-${RAILS_VERSION}
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -16,8 +17,14 @@ DEPENDS+=	${RUBY_ACTIONPACK_DEPENDS}
 
 RUBY_RAILS_SUPPORTED=	32
 RUBY_RAILS_STRICT_DEP=	yes
-USE_RAKE=		RUN
-OVERRIDE_GEMSPEC+=	rack-ssl>=1.3.2 rdoc>=3.4
+RUBYGEM_OPTIONS+=	--format-executable
+OVERRIDE_GEMSPEC+=	rack-ssl>=1.3.2 rdoc>=3.4 \
+			:executables rails=rails32 :files bin/rails=bin/rails32
+
+pre-configure:
+	${TEST} ! -f ${WRKSRC}/bin/rails || \
+		${MV} ${WRKSRC}/bin/rails ${WRKSRC}/bin/rails32
+	${CHMOD} ${BINMODE} ${WRKSRC}/bin/rails32
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
